Python 异常处理

########--程序异常 ----1

try:    #捕获异常的起首
    open("xxx.txt")
	print("---------1-----------")

except NameError,FileNotFoundError:   #捕获异常的哪些类型的异常
    print("有异常")
except Exception as ret： #加上as ret 把异常的类型传输进ret这个变量里
    print("如果用了Exception,那么就是前面没有匹配到的异常全部归类到这里进行这里的执行代码")
    print(ret)
else: #没有异常才会执行的下面一串代码
    print("没有异常执行的")
finally:
    print("最后执行的代码，无论是有异常还是没有异常都会执行")
    
print("继续")	

#当上面这些代码执行的时候，python2和python3所得出的结果不同

#Python2 会报IOError的错误
jony@jony:~$ python yichang2.py 
Traceback (most recent call last):
  File "yichang2.py", line 4, in <module>
    open("xxx.txt")
IOError: [Errno 2] No such file or directory: 'xxx.txt'

#Python3会取SyntaxError错误
jony@jony:~$ python3 yichang2.py 
  File "yichang2.py", line 7
    except NameError,FileNotFoundError:
                    ^
SyntaxError: invalid syntax


######## 程序异常 ----2
import time
try:
    f = open("test.txt")
    try:
        while True:
	    content = f.readline()
	    if len(content) == 0:
	        break
	    time.sleep(2)
	    print(content)
    except:
        #如果在读取文件的过程中产生了异界，就会捕获到，例如按下Ctrl+c
	pass
    finally:
        f.close()
	print("关闭文件")
except Exception:
    print("没有这个文件")
    
    
    
######## 程序异常的传递：----1

def test1():
    print("----1----")
	print(num)
	print("----1----")
	
def test2():
    print("----2----")
	test1()
	print("----2----")	

def test3():
    try:
		print("----3----")
		test1()
		print("----3----")	
    except Exception as result:
	    print("捕获到了异常，信息是:%s"%result)
	
    print("----3.2----")

test3()
print("------华丽的分割线------")
test2()	

#### 得到的结果是：
ony@jony:~$ python3 chuandi.py      。
----3----
----1----
捕获到了异常，信息是:name 'num' is not defined    #当我们用Python3执行这个代码的时候，test3里有定义try： 所以有捕捉到错误的信息
----3.2----
------华丽的分割线------
----2----
----1----
Traceback (most recent call last):              #当代码执行test2()的时候当调用test1()的时候程序就崩了，因为print(num)没有这个值，所以就直接报错
  File "chuandi.py", line 23, in <module>
    test2() 
  File "chuandi.py", line 8, in test2
    test1()
  File "chuandi.py", line 3, in test1
    print(num)
NameError: name 'num' is not defined
jony@jony:~$ 


